@@ -20,15 +20,9 @@
 
 package net.sourceforge.atunes.kernel.modules.draganddrop;
 
-import java.awt.datatransfer.DataFlavor;
-import java.awt.datatransfer.UnsupportedFlavorException;
 import java.io.File;
-import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.StringTokenizer;
 
 import javax.swing.TransferHandler.TransferSupport;
 
@@ -42,7 +36,6 @@ import net.sourceforge.atunes.model.IPlayListHandler;
 import net.sourceforge.atunes.model.IPlayListIOService;
 import net.sourceforge.atunes.model.IPlayListTable;
 import net.sourceforge.atunes.utils.CollectionUtils;
-import net.sourceforge.atunes.utils.Logger;
 
 /**
  * Handles drag and drop with source from external application
@@ -51,16 +44,6 @@ import net.sourceforge.atunes.utils.Logger;
  * 
  */
 public class ExternalImportProcessor {
-
-	/**
-	 * Mime type of a list or URIs
-	 */
-	private static final String URI_LIST_MIME_TYPE = "text/uri-list;class=java.lang.String";
-
-	/**
-	 * Data flavor of a list of URIs dragged from outside application
-	 */
-	private DataFlavor uriListFlavor;
 
 	private ILocalAudioObjectFactory localAudioObjectFactory;
 
@@ -129,7 +112,9 @@ public class ExternalImportProcessor {
 	}
 
 	boolean processExternalImport(final TransferSupport support) {
-		List<File> filesDragged = getFilesDragged(support);
+		List<File> filesDragged = beanFactory.getBean(
+				ExternalDragAndDropDataExtractor.class)
+				.getFilesDragged(support);
 
 		if (!CollectionUtils.isEmpty(filesDragged)) {
 			List<IAudioObject> filesToAdd = getFilesToAdd(filesDragged);
@@ -139,7 +124,8 @@ public class ExternalImportProcessor {
 				int dropRow = playListTable.rowAtPoint(support
 						.getDropLocation().getDropPoint());
 				playListHandler.addToVisiblePlayList(dropRow, filesToAdd);
-				// Keep selected rows: if drop row is the bottom of play list
+				// Keep selected rows: if drop row is the bottom of play
+				// list
 				// (-1) then select last row
 				if (dropRow == -1) {
 					dropRow = playListHandler.getVisiblePlayList().size()
@@ -172,79 +158,4 @@ public class ExternalImportProcessor {
 		return filesToAdd;
 	}
 
-	/**
-	 * @param support
-	 * @return
-	 */
-	@SuppressWarnings("unchecked")
-	private List<File> getFilesDragged(final TransferSupport support) {
-		List<File> files = null;
-		try {
-			// External drag and drop for Windows
-			if (DragAndDropHelper.hasFileFlavor(support.getDataFlavors())) {
-				files = (List<File>) support.getTransferable().getTransferData(
-						DataFlavor.javaFileListFlavor);
-				// External drag and drop for Linux
-			} else if (hasURIListFlavor(support.getDataFlavors())) {
-				files = textURIListToFileList((String) support
-						.getTransferable().getTransferData(getUriListFlavor()));
-			} else if (DragAndDropHelper.hasStringFlavor(support
-					.getDataFlavors())) {
-				String str = ((String) support.getTransferable()
-						.getTransferData(DataFlavor.stringFlavor));
-				Logger.info(str);
-			}
-		} catch (UnsupportedFlavorException e) {
-			Logger.error(e);
-		} catch (IOException e) {
-			Logger.error(e);
-		}
-		return files;
-	}
-
-	private List<File> textURIListToFileList(final String data) {
-		List<File> list = new ArrayList<File>(1);
-		for (StringTokenizer st = new StringTokenizer(data, "\r\n"); st
-				.hasMoreTokens();) {
-			String s = st.nextToken();
-			if (s.startsWith("#")) {
-				// the line is a comment (as per the RFC 2483)
-				continue;
-			}
-			try {
-				URI uri = new URI(s);
-				File file = new File(uri);
-				list.add(file);
-			} catch (URISyntaxException e) {
-				Logger.error(e);
-			} catch (IllegalArgumentException e) {
-				Logger.error(e);
-			}
-		}
-		return list;
-	}
-
-	private boolean hasURIListFlavor(final DataFlavor[] flavors) {
-		for (DataFlavor flavor : flavors) {
-			if (getUriListFlavor().equals(flavor)) {
-				return true;
-			}
-		}
-		return false;
-	}
-
-	/**
-	 * @return Data flavor of a list of URIs dragged from outside application
-	 * @throws ClassNotFoundException
-	 */
-	private DataFlavor getUriListFlavor() {
-		if (uriListFlavor == null) {
-			try {
-				uriListFlavor = new DataFlavor(URI_LIST_MIME_TYPE);
-			} catch (ClassNotFoundException e) {
-				Logger.error(e);
-			}
-		}
-		return uriListFlavor;
-	}
 }
